# contro

./: .gitignore  .gitmodules  404.html  README.md  background.html  hook.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
assets/javascripts/: bundle.13a4f30d.min.min.js  extra.8c7988.min.js  extra.8cd5ce.min.js  extra.8ecb35.min.js  extra.ff01eb.min.js  extra.js  extra.min.js  hero.js  tei-highlight.js
assets/stylesheets/: documentation.css  documentation.min.css  (+35 more)
background/: index.html
bib/: references.bib
context/: index.html
docs/: Apologia-TEI.xml  background.md  context.md  elements.md  examples.md  index.md  model.md  scenario.md
elements/: index.html
examples/: index.html
js/: extra.js
model/: index.html
ont/: DUL_v40.owl  DnS-exemplified.ttl  arg-example.ttl  arg-old.ttl  arg.config  arg.jsonld  arg.owl  arg.properties  arg.ttl  catalog-v001.xml  contro.jsonld  contro.owl  contro.properties  contro.ttl  d0.owl  data-inferred.ttl  data.properties  data.ttl  example-inferred.ttl  example.jsonld  example.owl  example.ttl  framester.owl  inferred.ttl  persp.jsonld  persp.owl  persp.properties  persp.ttl  perspectivisation.owl
ontexport/: .gitignore  settings.gradle.kts
onto/: contro.owl  persp.ttl
overrides/: documentation.html  hero.html  hidden.html  main.html  tei.html
scenario/: index.html
scripts/: exclude-search.py  hook.py  inline_attr.py  make_value.py  odd-to-html.py  odd-to-rnc.py  ontdoc.py  run-doc-template.py  tei-to-markdown.py  tei-to-turtle.py  template.md  write_if_changed.py
search/: search_index.json
tei/: Apologia-Ragione-TEI-en.md  Apologia-Ragione-TEI-it.md  Apologia-Ragione-TEI.xml  Apologia-TEI-en.md  Apologia-TEI-it.md  Apologia-TEI.md  Apologia-TEI.xml  Ragione-TEI-en.md  Ragione-TEI-it.md  Ragione-TEI.md  Ragione-TEI.xml  tei-to-markdown-custom.xsl  tei_arg.html  tei_arg.odd  tei_arg.rnc
templates/: doc-template.md  doc-template.md.j2
(+68 files in other folders)
